bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:5: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (!aSmile && !bSmile) { 
         ^